# ChangeLog for dev-perl/XML-LibXML
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/XML-LibXML/ChangeLog,v 1.144 2012/11/03 18:22:18 tove Exp $

*XML-LibXML-2.1.0 (03 Nov 2012)

  03 Nov 2012; Torsten Veller <tove@gentoo.org> +XML-LibXML-2.1.0.ebuild:
  Version bump

*XML-LibXML-2.0.400 (10 Aug 2012)

  10 Aug 2012; Torsten Veller <tove@gentoo.org> +XML-LibXML-2.0.400.ebuild:
  Version bump

  28 Jul 2012; Torsten Veller <tove@gentoo.org> -XML-LibXML-1.960.0.ebuild,
  -XML-LibXML-1.970.0.ebuild, -XML-LibXML-1.980.0.ebuild,
  -XML-LibXML-1.990.0.ebuild, -XML-LibXML-2.0.200.ebuild:
  Cleanup

*XML-LibXML-2.0.300 (27 Jul 2012)

  27 Jul 2012; Torsten Veller <tove@gentoo.org> +XML-LibXML-2.0.300.ebuild:
  Version bump

*XML-LibXML-2.0.200 (13 Jul 2012)

  13 Jul 2012; Torsten Veller <tove@gentoo.org> +XML-LibXML-2.0.200.ebuild:
  Version bump

*XML-LibXML-2.0.100 (24 Jun 2012)

  24 Jun 2012; Torsten Veller <tove@gentoo.org> +XML-LibXML-2.0.100.ebuild:
  Version bump

  24 Jun 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
  Update CPAN upstream info

  09 Jun 2012; Torsten Veller <tove@gentoo.org> XML-LibXML-1.900.0.ebuild:
  Fix t/03doc.t test failure with recent libxml2. Reported by Nikoli in bug
  #420313

*XML-LibXML-1.990.0 (31 May 2012)

  31 May 2012; Torsten Veller <tove@gentoo.org> +XML-LibXML-1.990.0.ebuild:
  Version bump

*XML-LibXML-1.980.0 (14 May 2012)

  14 May 2012; Torsten Veller <tove@gentoo.org> +XML-LibXML-1.980.0.ebuild:
  Version bump

  09 May 2012; Alexis Ballier <aballier@gentoo.org> XML-LibXML-1.970.0.ebuild:
  keyword ~amd64-fbsd

*XML-LibXML-1.970.0 (02 May 2012)

  02 May 2012; Torsten Veller <tove@gentoo.org> +XML-LibXML-1.970.0.ebuild:
  Version bump

  31 Mar 2012; Torsten Veller <tove@gentoo.org> -XML-LibXML-1.70.ebuild,
  -XML-LibXML-1.950.0.ebuild:
  Cleanup

  18 Mar 2012; Raúl Porcel <armin76@gentoo.org> XML-LibXML-1.900.0.ebuild: