@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX 50git-gentoo.el 472 SHA256 7cd37e8db7eaeee8d822d38851eb69771b0f09c79883a8e51309a9add85fdbe2 SHA512 0435d7d67f2b64460a62c6a95c65a722c0f8d5d50d064a81e690de84a761ba518d32db545ee70c0fa3ad7803d77d5dab100689888bc92c9d82f2d6d5073623b3 WHIRLPOOL 887682f79182f6728af3c0fd2ee0e81319d49761a987559684be5e4acae4af579a5b8d1197ddba31452cec179de3c8f5784cc85ad61f78b400e42c204c93f642
 AUX git-1.6.6.1-interix6.patch 457 SHA256 a8b788b8ef41ce7fd1018f13795694a908fbb1884de195c89a58fe87f3968849 SHA512 58e63d78d665f9122214ec1b7a8d730f7c9d8938283db98580334e293f46a984b86c8d72fbe48f891eda6d48fc76982857539761c6dcf881b1bb5817c275d263 WHIRLPOOL 803ec2121a7abe018c591c249c2b835aadd114a65b0cf6be4fd6440c77f9282d13b4225e1d63a5b22bb46f058bcd073dc97e801476278a91ff9f82634104f3d8
 AUX git-1.7.1-interix.patch 2192 SHA256 b560fcc41ea93df429290ec645f3e37368ceec1101f7124574fa6d9bab00a495 SHA512 bd02d6c2b83827eb3d286ef37b358c2eb25d453655bebf1d2d074b47e7aab1c3b3f07da21eca33f01ac457d2878b674b2c857f9915ac71438a02bca112c89c41 WHIRLPOOL 7a314149acaa54199a258c1ebd9ee34356fa0393d3d49c994b25a66a593d4214391495d5dd67db01e6b1e396cb6c96b0ddcb7c3d78316bec7fb10af0e7e38af4
@@ -46,8 +49,15 @@ EBUILD git-1.7.12.ebuild 14828 SHA256 393fe7d27e3df45627618bae9b23b32cd4a08d25a8
 EBUILD git-1.7.2.5.ebuild 13519 SHA256 481145683960e2d32d104d626898f2d71ebaa925a0df6488aa34bd13f19db842 SHA512 0a2b345963f7979662dc4a4c2cb759a214e0571cf565e77e7f36686eb50bb01d1a41f6218ef9c32b66e1e1299e260a6dbff3765c99f7eba071424e7a55fed8fa WHIRLPOOL 9d6f5a8fb02439b94be08e8db4f1fd8be7a165e5573bd7b94a27b4735b84fd17a9bd45f0c1b792a00cfb300b1ce73b7cdee0f54a03462f82a6d78d1326c5da9a
 EBUILD git-1.7.3.4-r1.ebuild 14028 SHA256 61d5e1bcdf37f4d5cb93e32780642a25352ceec58ad5f418717c9e4ae40138eb SHA512 d9fd0f1e72dbee3e07aeb6d6e736af00f56a999ceb85ea318d65213f3b78879a95e1a2e0fbfcb5988103dd4fcddf34135e826f629e62f98b0a175154c5ba9a3d WHIRLPOOL d9942dd6e7b066f06d1347895f0840d610a402ca611edc044afbd786ef96bc4d87b831e6cd5f87ccf2a49e17f3e805f1559cf03304f2a3af0dbde544b3f33dd0
 EBUILD git-1.7.8.6.ebuild 14683 SHA256 38f21df5f6abefb90ce93129adacf4b307decd48417d6830eced6ec0b595cbd0 SHA512 7ef0bc6125d06100636bfc15fef7d0cacef08f2c9a75beaa7331f1e5c5e06a7cd96f84b0ec975be8fd290efccaf0b9e40edb524063a2a9bfe69870bd2b2c9185 WHIRLPOOL 06ed98a81369963955aafa2186b30fa64ec544f8f1b268c7bb228d83c0e371e70223a69f7ed69da7df47ddc1a10459c40f36e3b2659d9c85c57e0dc036870d9c
-EBUILD git-1.8.0-r1.ebuild 17075 SHA256 e3a3932fc9c146b635162b755a1978bcb8ccc4cf4897d287be7ac77d54621409 SHA512 5f4f88986ac15e1bf25aef0b7f006e8abbd277bcf70941f95c7f5243ec0e5b34b1a45e870dbcd283e82667ceb1613586fd07861cc2b887bb04cbdd144aedf2be WHIRLPOOL 680d9bab0c71c3c266dee4e567ae85f263ea039ad6dfe5ffba39d6b43225ee2559baf8e626848c6d174cbcaa4e96b90cab325b9763e7496f4650e3307aa0ce22
+EBUILD git-1.8.0-r1.ebuild 17164 SHA256 276f681b0c8569e162d5f26f9a1c702a75519445d7a5a355667893dde73d3172 SHA512 7169dcb619096877069b6ca503578f333075c01d77fe5a0d80d89898faa34bdee5bac965e484f7a2ae83b428ea05914051e06f130f862702b976c525ada9a9db WHIRLPOOL 31640abe272caa1460ac95a8da1754a4acc27ac119c854dfcf60272bff5334258e7b95f9d228fbe400fadb959a1acc194b48319abfa6f375be56f689aeb149b2
 EBUILD git-1.8.0.ebuild 15358 SHA256 d14583eae36328c2c0cb910e371ef2a1041c12b42be58c778e21b6096edbd880 SHA512 258b3c503c2e605689753447f59770e5d3baaf2d781affb8723a30707b901f39c6a42bcb49253251e686d60fc2ab63cf9eb53194d6c6fdab20f23726726ebc90 WHIRLPOOL 7b1414b53c20faa05086e7af84a92dc0e622cd27d56edb80e4d02b07c23c12a69449d079762543399ae9fc2d625ffd1b0cf1ff6d2078392d4bb862fd4a3a51db
-EBUILD git-9999.ebuild 14826 SHA256 c86a750e4410f2f8afbcaf2c7fea33ecf9c083f2600546ef8579a98d387284ba SHA512 5c87dec06b95423b32b5791575c7a058bdb2bd13590f5d956a2f52082b878b46bfce8e9dc032d4faa69628891505558d41e2528ee1ead13c6514dd0c66505f1a WHIRLPOOL 65d9e55afa4edc8ea23a0a69439645d40bd0d675478e98a4e4613df6ef180ed35bc6185cb45dc25d86465deb9c61526c6d735c8582718ece115871ed399bd3ec
-MISC ChangeLog 94112 SHA256 157e451041957a08520c3cf6262f618fa07b4e51172fae1b1684d8135ddae5cd SHA512 0a118196fcd8603cbb8385b4408ce1ba5a0beb8ac5bb2c7623d1b8b1b0e20bb7203474055d8c91843e70685e05707236f1eb74cf3376db32fdf7e071218ce7e5 WHIRLPOOL 163ee1e45a1c2effdb82cc86827052d34699df9867339366781c090c84f3ce993a4ad8a8833d16e8a3101b5fef16c718739eded9659173cacc10ea2b3014f4b2
+EBUILD git-9999.ebuild 14915 SHA256 ff499106ade0509c9d2a2f2a7dfb8d44b6f3bba5aa756e69b0e272ae7a9cb854 SHA512 8075131b35de77ee1f01ee3bdfd76e786c2a916201da88f83501d5aee05a32e8aa7a30200f4493ff067452c68ec30b0e0ec5b04e9694e4d2867a93fde8a493b0 WHIRLPOOL 21ea9f45d6371cda9d8f68bdc6595a3d05074dc484e3b07155b3aa44d57f8ca2ccc8afd6fb52276ece1e2e4f756ffc28c14c80e3f1fcab4dcedd641462cd9260
+MISC ChangeLog 94248 SHA256 5ec42b4ec3a17fe40fc9f8fb1ad0fa55c898d6731bca047cfccbaf651e8b7f75 SHA512 809e272e4b9d1c97057a8134231ada260b860effbb319c93011ff74670bb28da80bfc04c73543a510f274a76669819ce037417a003694aef2412fc2bd17e7b7f WHIRLPOOL 0360d59e6eec0382b5b473d0d9c1dc1f885bfc53f184ac6a9ce29913fa7cf528ca2620727269dc89437f8ca5791524587ced08e43dfac0d4f7d7fe65032bcd14
 MISC metadata.xml 1821 SHA256 3f0864988fd1d6ca97db612f9157275bf00336143969acb9d82ca6e6523127f5 SHA512 9f2d7adaf973837028f0c7cb305ac9917a88f07490ee172e570fc70860385de5c2b00edd6c22a37c9448d9260f51554e87b32b24e3bbbcc521f9ce5bbcb1fce0 WHIRLPOOL 7c135c44361168708252533d60a05f2c7d4b202c96c212e75d3057fa5ad80928c7d7452359b7e068c7a1f41dd4276c5917ac47ae010ec93821b2a9a3518f7aa9
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (Darwin)
+
+iEYEAREIAAYFAlCdRi4ACgkQX3X2B8XHTokiqQCdG1gwOjY70evKFqIR3dS15s0h
+uf0AoJkc2Fhjnmm90Q6omg0vnmqBNJBh
+=WlxC
+-----END PGP SIGNATURE-----
