@@ -21,15 +21,13 @@ DIST subversion-1.7.6.tar.bz2 6006767 SHA256 d1a4f13c5c992a1527a2aeac262c6f54e07
 DIST subversion-1.7.7.tar.bz2 6023686 SHA256 fc85a9341d1dc275b279e470776014b02328a028e48a7ac7868ac07d4a40a321 SHA512 0ce0a22e05c76132d9a1650cee3d7fdf6eb7606eb7197ee604e48129e6e3ba7ebc910d71c756ef2aced7100c8cd9a7d1dc3da8744315be0a8c506fdafa8ada19 WHIRLPOOL d0c82ab9abd8e95cbd5a5cf0d082a5b1eda7451bfaa5754d33a10279d94548f8c1457b3089c4bbb3347569b96be293e04371c05965ab2019aa38084831bc111d
 EBUILD subversion-1.6.17-r7.ebuild 16378 SHA256 be56ed7e650e8cb529f8056fa7722bdab5137a8f7f1cbef419fbcc633430ccd8 SHA512 c4edda843f685ac18b5b8dbacc9160b27f397b34ec7619a4493558945d15248c0e2a0bf04dc66855889d48f5205dfca9d0909d045f0b3b9a8c6c9c58040e6c68 WHIRLPOOL d581a5211295a13131b2a4ac5ffb2a9b0702cdf0e78d9c1d25877b6a1e588d537d4ca32dd441cba040887c74b5d0cd607b4cb5325fdfedd9b1b90ad428c34760
 EBUILD subversion-1.7.6.ebuild 15754 SHA256 0091087f29c193141eacd222f69c3980fd5eca113356b90c552344e7942e0a4a SHA512 711502b245ea0d906fedb94bda975e6587848c610c1278e2ff8aa8545e7380df01519f107dcba2a39d07075e11e5cb0e0725ad3bcbb36883f87a16d97ff69e0a WHIRLPOOL 1cf5d84a0bc43c9b1119896e3b9e5de485cc9e44ca1f30057dc0ae48ad07737579f841b0220eb017a04b202e9c299c03e13a065c68fb28ab5a03cfaf02a7c3f9
-EBUILD subversion-1.7.7.ebuild 15964 SHA256 4b3fdc1578fac2e872e649920c31fe85d9a265380f23b9ace621865db541511a SHA512 eb501dcea7e13817aaddbaa07d537d24adfee4eb45c0437ae20062f0f0aeefee5532be93ec8452bf20c4661e9fbaa73f8d3fe4fdf147f0636eef52048d24552f WHIRLPOOL fa41277e3d2b06f8b48343d2ab1013c28753a53f244c79788c31d3f4d82d09015f5d7bf42b2ea0237d11a8ace944f62e4c7bf71cdde25651e3471253a1324a1e
-MISC ChangeLog 86468 SHA256 057a628bce3c5687e4ca4437f2126d599c7f92a98537941917faef9269adff04 SHA512 3c630d5e79c1463d0c4cac5e5e128a7710bdc955e7791e3851a6eb924d6fa98d1470496db2150b0481bbc4db5a235800a04edc8051b4f9639f1774b1ec707a03 WHIRLPOOL 42e4574e76ad1816c224467c4b7e6870a76e669a6fc030f4dd9e4fc626aaa72d847a6cdb051532bb7f62e9e05d22d8e2144424df4d266779646dc54e42b94f1f
+EBUILD subversion-1.7.7.ebuild 16161 SHA256 0619b0e8ff9fe038cc061550f25f2137f7118a1ecae3807867f1203a54ea5966 SHA512 4896cdbc81e44ff8544afa4f8ff498cf818f3a854555312aba549a05cdba4bdcba01e0de1c6538fc0a12ee9c7ce6464190827d3142c5e225b76badc166171de8 WHIRLPOOL c0ec05dc51c9cf49d729c68634a3421e241aa99ed4b40c85827b424ba67ffff41ac37e9465e3f7f12d5eb9d92db1021cc147f0a822fe2c189e4476e7f5080cc6
+MISC ChangeLog 86669 SHA256 f450bbe83aa1daf5aa07eaafdd936918bb00de9bda93a0ce15151c2b706cd564 SHA512 e9b9ad9d633e490ae150a5660d6affe2fe128ebf3e928667a8e853977d37c963f1f316f3880c2400388781cd97586f1e8174acce24fcae540a9aa461c82fd083 WHIRLPOOL bbd5babb3028e64adf3aec72c70d587d97226a3856da07c5fe1d9bfdeb539e534d3cf88a6841096ff8a365bbdc1160b6a95a31648c59ab0878c27b2cb0f539fd
 MISC metadata.xml 628 SHA256 b3715692f57550cecbca66df385d0cc48ef3d6707b4832b88add2f689c35969d SHA512 2c1f375df0efee06e088db3c7c19b96e23b615053aaaa98bc45b5d4945a39a3c21a868c80b938be88ff840824b2e8aebe9379633f106d2cfead4b3fd74cff927 WHIRLPOOL 1387297f9b5b7feb6e90cbda59b0cd61519d0395ec94fb315d2ec97adb66c37a9aa59736d968920eab7229342105846805458b8789dc84ef9ecbd40e452c02c8
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.19 (Darwin)
 
-iJwEAQEIAAYFAlCJceQACgkQG7kqcTWJkGcQ3AQAwW4FpD8uoEfMRhdwlIQYJQFo
-OSgLXP1QwOiGO7XzhFGC4kRV5O261NarYaF7+X5RrLKCsodbCGsjEtw1YIJqhn2I
-PaH9gnQAeKcEoZdUGj+NtqZtMGFoQzG1ztUaFi/0rlLHQn7tH1yI7zhqOs/yqNfX
-/en/bryxGhft2RbMbME=
-=i02z
+iEYEAREIAAYFAlCdNhkACgkQX3X2B8XHTomWjwCfTsccb/tPKS6CplDicpmJKXAh
+o98AnRtCZ8DZ2Il6IuHMrqnREtKXb8G4
+=tM0O
 -----END PGP SIGNATURE-----
