@@ -1,6 +1,10 @@
 # ChangeLog for dev-vcs/subversion
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-vcs/subversion/ChangeLog,v 1.85 2012/10/25 17:07:41 tommy Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-vcs/subversion/ChangeLog,v 1.86 2012/11/09 16:58:00 grobian Exp $
+
+  09 Nov 2012; Fabian Groffen <grobian@gentoo.org> subversion-1.7.7.ebuild:
+  Don't enable LD_PRELOAD kludge on Solaris, it breaks in case of a mismatch
+  between userland and current build target.
 
 *subversion-1.7.7 (25 Oct 2012)
 
