@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/XML-LibXML
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/XML-LibXML/ChangeLog,v 1.144 2012/11/03 18:22:18 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/XML-LibXML/ChangeLog,v 1.145 2012/11/09 19:12:06 tove Exp $
+
+*XML-LibXML-2.1.200 (09 Nov 2012)
+
+  09 Nov 2012; Torsten Veller <tove@gentoo.org> +XML-LibXML-2.1.200.ebuild:
+  Version bump
 
 *XML-LibXML-2.1.0 (03 Nov 2012)
 
